--- a/posts/20221126-1.md
+++ b/posts/20221126-1.md
@@ -6,6 +6,6 @@ Try doing that Bedrock users!
 
 
 ## Pojav Performance!
-I have also prepared a PojavLauncher modpack that lets you play with Sodium and Sodium Extras. Here is the download link https://soldev69.github.io/zeblog/downloads/pojavlauncher-performance.zip. Just download this and copy the folders inside to your .minecraft folder in pojavlauncher, on android this is at `/storage/emulated/0/Android/data/net.kdt.pojavlaunch/files/.minecraft` if you installed from Google Play or `/storage/emulated/0/Android/data/net.kdt.pojavlaunch.debug/files/.minecraft` if you have the apk. Most Android file explorers will open to `/storage/emulated/0` if you try viewing Internal Storage, if these folders are blocked try using FX File Explorer, which you can get from [here](https://play.google.com/store/apps/details?id=nextapp.fx), after installing that you should see a home menu with a button labeled "Main Storage", tap on that. You might need to enable hidden folders to view .minecraft, do that by tapping on the 3 dots on the top right and tapping "Show Hidden". 
+I have also prepared a PojavLauncher modpack that lets you play with Sodium and Sodium Extras. Here is the download link [https://soldev69.github.io/zeblog/downloads/pojavlauncher-performance.zip](https://soldev69.github.io/zeblog/downloads/pojavlauncher-performance.zip). Just download this and copy the folders inside to your .minecraft folder in pojavlauncher, on android this is at `/storage/emulated/0/Android/data/net.kdt.pojavlaunch/files/.minecraft` if you installed from Google Play or `/storage/emulated/0/Android/data/net.kdt.pojavlaunch.debug/files/.minecraft` if you have the apk. Most Android file explorers will open to `/storage/emulated/0` if you try viewing Internal Storage, if these folders are blocked try using FX File Explorer, which you can get from [here](https://play.google.com/store/apps/details?id=nextapp.fx), after installing that you should see a home menu with a button labeled "Main Storage", tap on that. You might need to enable hidden folders to view .minecraft, do that by tapping on the 3 dots on the top right and tapping "Show Hidden". 
 
 Here is Minecraft running at 30fps on my Galaxy J8 with a Snapdragon 450 processor that lags on Roblox and Discord. Be warned, PojavLauncher will burn through your battery if you use it for too long. ![PojavLauncher running at 30fps on my potato Galaxy with 50ms ticks](/images/pojav-pack-1.jpg) A dedicated article or video will probably be coming out later this week on how to install this.
