--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-PleasePleasePleasePlease use the github pages url at https://soldev69.github.io/zeblog/ instead, thank you :)
+Please use the github pages url at https://soldev69.github.io/zeblog/ instead, thank you :)
